--- a/src/Assets/styles/style.css
+++ b/src/Assets/styles/style.css
@@ -10,7 +10,7 @@ body {
   min-height: 100vh !important;
 }
 .text-gradient {
-  background-image: linear-gradient(90deg, #ffdf56, #ff8735 50%, #ffa6c1);
+  background-image: linear-gradient(171deg, #ff8029 50%, #2300ff);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
