design with sidebar

--- a/src/Assets/styles/style.css
+++ b/src/Assets/styles/style.css
@@ -5,7 +5,7 @@ body {
   font-size: 14px;
   line-height: 26px;
   font-weight: 400;
-  background-color: var(--backgroundColor) !important;
+  background-color: var(--backgroundColor2) !important;
   color: var(--textColor) !important;
   min-height: 100vh !important;
 }
