--- a/src/Assets/styles/style.css
+++ b/src/Assets/styles/style.css
@@ -62,10 +62,11 @@ body::-webkit-scrollbar,
   background: #00000099;
 }
 .pageCard {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  /* border-top-left-radius: 20px; */
+  border-radius: 20px;
+  height: calc(100vh - 140px);
   /* padding-bottom: 200px !important; */
-  min-height: calc(100vh - 79px);
+  /* min-height: calc(100vh - 79px); */
   width: 100% !important;
 }
 .commonBtn {
@@ -122,4 +123,10 @@ input.form-control {
   border-radius: 10px;
   border: 1px solid #ddd;
   width: 100%;
+}
+
+@media (max-width: 575px) {
+  .pageCard {
+    height: calc(100vh - 260px);
+  }
 }
